tests/NormalTests/paczka1/small_fuzzy/10575451.err
Error in line 4: A745 S613 56,6
Error in line 1: q7W7b S613 65,0
Error in line 6: q7W7b A223 55,4
Error in line 9: F3L1 A745 97,3
